additional forms and features added

--- a/css/index#report.css
+++ b/css/index#report.css
@@ -1,67 +1,46 @@
-html{
-    background: #ffffff;
-    overflow: auto;
-    color: #303031;
+#content{
+    position: relative;
+    top: -6px;
+    width: 101.1%;
 }
-body{
-    font-family: 'Roboto', serif;
-}
-#top{
-    display: flex;
+#vsql-login{
+    font-size: 13px;
+    color: rgba(0.0,0.0,0.0,0.7);
     position: relative;
     left: -7.8px;
-    top: -8px;
-    width: 101.75%;
-    height: 40px;
-    border-top: 4px solid #ff4040;
+    min-width: 147px;
+    width: 11%;
+    justify-content: left;
+    padding-bottom: 4px;
     border-bottom: 1px solid rgba(0.0,0.0,0.0,0.1);
-}
-.toplinks{
-    display: inline-block;
-    position: relative;
-    height: 26px;
-    top: 6px;
-    left: 5px;
-}
-#homelink{
-    text-decoration: none;
-    position: relative;
-    color: rgba(0.0,0.0,0.0,0.7);
-    font-size: 22px;
     border-right: 1px solid rgba(0.0,0.0,0.0,0.1);
 }
-#homelink:hover{
-    border-right: 1px solid #ff4040;
-}
-.toplinks-sub{
-    position: absolute;
-    left: 140px;
-    top: 13px;
-}
-.toplinks-sub > a{
-    text-decoration: none;
-    font-size: 14px;
-    color: rgba(0.0,0.0,0.0,0.6);
-    position:relative;
-}
-#opt1{
-    display: inline;
+
+#cred-label{
+    color: rgba(0.0,0.0,0.0,0.5);
+    font-size: 12px;
     position: relative;
-    left: 0px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 2px;
 }
-#opt2{
-    position: relative;
-    left: 22px;
+#vsql-login:hover{
+    box-shadow: 0px 3px 10px 2px rgba(0.0,0.0,0.0,0.2);
 }
-#opt3{
-    position: relative;
-    left: 44px;
+#log:hover{
+    font-weight: 600;
+    color: rgba(0.0,0.0,0.0,0.9)
 }
-#opt4{
-    position: relative;
-    left: 66px;
+#pass:hover{
+    font-weight: 600;
+    color: rgba(0.0,0.0,0.0,0.9)
 }
-#opt5{
+
+#failed{
+    font-size: 16px;
+    color: red;
     position: relative;
-    left: 88px;
+    display: flex;
+    justify-content: center;
+    top: -60px;
 }
