--- a/css/index#report.css
+++ b/css/index#report.css
@@ -4,43 +4,78 @@
     width: 101.1%;
 }
 #vsql-login{
+    margin-left: 25%;
     font-size: 13px;
     color: rgba(0.0,0.0,0.0,0.7);
     position: relative;
-    left: -7.8px;
-    min-width: 147px;
-    width: 11%;
-    justify-content: left;
-    padding-bottom: 4px;
-    border-bottom: 1px solid rgba(0.0,0.0,0.0,0.1);
-    border-right: 1px solid rgba(0.0,0.0,0.0,0.1);
+    left: -6.8px;
+    height:105px;
+    min-width: 200px;
+    width: 50%;
+    justify-content: center;
+    padding-bottom: 1px;
+    border: 1px solid rgba(0.0,0.0,0.0,0.1);
+    border: 1px solid #4994eb;
+    border-radius:10px 10px 10px 10px;
+    box-shadow: 0px 3px 10px 2px rgba(0.0,0.0,0.0,0.2);
 }
-
 #cred-label{
     color: rgba(0.0,0.0,0.0,0.5);
     font-size: 12px;
     position: relative;
     display: flex;
+    top:5px;
     justify-content: center;
     padding-bottom: 2px;
+    border-bottom: 1px solid rgba(0.0,0.0,0.0,0.1);
 }
-#vsql-login:hover{
-    box-shadow: 0px 3px 10px 2px rgba(0.0,0.0,0.0,0.2);
+#log, #pass{
+    position: relative;
+    top: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 3px solid rgba(0.0,0.0,0.0,0.0);
+}
+#pass{
+    top: 15px;
+}
+#submit{
+    background-color: #ffffff;
+    font-size: 16px;
+    color: #4994eb;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    top: 20px;
+    width: 100%;
+    height: 27px;
+    border: 0px solid rgba(0.0,0.0,0.0,0.1);
+    border-radius:0px 0px 10px 10px;
+    box-sizing: border-box;
 }
 #log:hover{
-    font-weight: 600;
-    color: rgba(0.0,0.0,0.0,0.9)
+    color: rgba(0.0,0.0,0.0,0.9);
 }
 #pass:hover{
-    font-weight: 600;
-    color: rgba(0.0,0.0,0.0,0.9)
+    color: rgba(0.0,0.0,0.0,0.9);
 }
+#submit:hover{
+    color: #005dc9;
+    border-bottom: 1px solid #4994eb;
+}
+#submit:active{
+    color: white;
+    background-color: #005dc9;
 
+}
+#failure{
+    position: relative;
+    top: 10px;
+}
 #failed{
     font-size: 16px;
     color: red;
     position: relative;
     display: flex;
     justify-content: center;
-    top: -60px;
 }
