--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,8 @@
     border-bottom: 1px solid rgba(0.0,0.0,0.0,0.1);
 }
 #sec-1:hover p{
-    color: #a69376;
+    color: #4994eb;
 }
 #sec-2:hover p{
-    color: #a69376;
+    color: #4994eb;
 }
